libs/rdb/test/compile_fail/select_sans_from.cpp
#include "test_fail.hpp"

void test() {
  check_tag(select(p.id));
}

